--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,99 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Jun-Hee Kim
+    - name: Contact
+      value: jh__kim@korea.ac.kr
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD Student in Artificial Intelligence
+      institution: Korea University, Seoul, Korea
+      year: Mar. 2021 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Advisor: Prof. Seong-Whan Lee
+        - GPA: 4.23 / 4.5
+    - title: B.S. in Mathematics / Physics
+      institution: Soongsil University, Seoul, Korea
+      year: Mar. 2015 - Aug. 2020
       description:
-        - Description 1.
-        - Description 2.
+        - Double Major
+        - GPA: 3.68 / 4.5
 
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Research Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Areas
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Computer Vision
+        - 3D Human Pose Estimation
+        - Vision-Language Model
+        - Text-to-Motion Generation
+        - Vision-Language-Action (VLA) for Physics-Based Animation
 
-- title: Other Interests
-  type: list
+- title: Publications (International Conference)
+  type: time_table
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: "Toward Approaches to Scalability in 3D Human Pose Estimation"
+      institution: NeurIPS 2024 (Vancouver, Canada) - Poster
+      year: Dec. 2024
+      description:
+        - Jun-Hee Kim, Seong-Whan Lee
+    - title: "ProPose: Probabilistic 3D Human Pose Estimation with Instance-Level Distribution and Normalizing Flow"
+      institution: AAAI 2025 (Pennsylvania, United States) - Poster
+      year: Feb. 2025
+      description:
+        - Jumin Han, Jun-Hee Kim, Seong-Whan Lee
+    - title: "PoseAnchor: Robust Root Position Estimation for 3D Human Pose Estimation"
+      institution: ICCV 2025 (Hawaii, United States) - Poster
+      year: Oct. 2025
+      description:
+        - Jun-Hee Kim, Jumin Han, Seong-Whan Lee
+    - title: "Towards Generalizable 3D Human Pose Estimation via Ensembles on Flat Loss Landscapes"
+      institution: NeurIPS 2025 (San Diego, United States) - Poster
+      year: Dec. 2025
+      description: 
+        - Jumin Han, Jun-Hee Kim, Seong-Whan Lee
+
+- title: Publications (International Journal)
+  type: time_table
+  contents:
+    - title: "EGPose: Explicit and Geometric Self-Supervision for 3D Human Pose Estimation"
+      institution: PROCEDIA COMPUTER SCIENCE
+      year: 2023
+      description:
+        - Geon-Jun Yang, Jun-Hee Kim, Hyun-Woo Kim, Gun-Hee Lee, Seong-Whan Lee
+    - title: "Geometry-driven self-supervision for 3D human pose estimation"
+      institution: NEURAL NETWORKS
+      year: 2024
+      description:
+        - Geon-Jun Yang, Jun-Hee Kim, Seong-Whan Lee
+
+- title: Patents
+  type: time_table
+  contents:
+    - title: "METHOD FOR GENERATING AND ESTIMATING 3D POSTURE, RECORDING MEDIUM AND DEVICE FOR PERFORMING THE SAME"
+      institution: "KR-Application No. 10-2023-0104847"
+      year: "" 
+      description:
+        - Kim Jun-Hui
+
+- title: Projects
+  type: time_table
+  contents:
+    - title: Research and Development of Vision-Language Model-based Document Parsing Techniques
+      institution: (주)코난테크놀로지, Korea
+      year: Sep. 2025 ~ Present
+    - title: Development of a General-Purpose AI Model for Industrial Safety
+      institution: (주)미스릴, Korea
+      year: Sep. 2024 ~ Oct. 2025
+    - title: Development of a Text-to-ClipArt Video Conversion System Based on a Large-Scale Generative Model
+      institution: (주)아이스크림미디어, Korea
+      year: Mar. 2023 ~ Mar. 2024
+    - title: A Study and Demonstration of 3D Human Pose Estimation using the Konan Deep Learning Framework
+      institution: (주)코난테크놀로지, Korea
+      year: Mar. 2023 ~ Dec. 2023
+    - title: Development of an AI Vision-Based Golf Putting Analysis and Coaching Service for Home Use
+      institution: (주)브이씨, Korea
+      year: Jan. 2022 ~ Dec. 2023
